# solidity-deposit-contract

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  ssz.py  test_deposit.py
